--- a/utils/config.yml
+++ b/utils/config.yml
@@ -2,8 +2,7 @@
 
 # 需要批量处理的路径，docs文件夹内的文件夹  (数组。映射路径：docs/arr[0]/arr[1] ... )
 path:
-  - docs # 第一个成员必须是docs
-  - docs/.vuepress/dist
+  - docs/.vuepress/dist # 第一个成员必须是docs
 
 # 要删除的字段 (数组)
 delete:  
