加上谷歌ad插件和配置

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "updateTheme": "yarn remove vuepress-theme-vdoing && rm -rf node_modules && yarn && yarn add vuepress-theme-vdoing -D",
     "editFm": "node utils/editFrontmatter.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue-google-adsense": "^1.10.1"
+  },
   "devDependencies": {
     "dayjs": "^1.9.7",
     "inquirer": "^7.1.0",
